--- a/gb/14/4/29/n4142731.md
+++ b/gb/14/4/29/n4142731.md
@@ -1,13 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/idc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/idc248/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/idc248/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/idc248/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/idc248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/idc248/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/idc248/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/idc248/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/idc248/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/idc248/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/idc248/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/idc248/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/idc248/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/idc248/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/idc248/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/idc248/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/idc248/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/idc248/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/idc248/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/idc248/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/idc248/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/idc248/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>嘉县府举办纪念王永庆先生感恩音乐会</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2014/04/1404281235461535-600x400.jpg" />
-<h6>嘉义县政府为感念台塑集团创办人王永庆先生生前对嘉义县教育、医疗与老人福利的支持与贡献，4月28日上午在嘉义长庚纪念医院大厅举办“田园有情、城市有爱”感恩音乐会，气氛温馨感人。（嘉义县政府提供）
-</h6>
+
+<h6></h6>
 <hr>
-<p>【大纪元2014年04月29日讯】〈大纪元记者蔡上海台湾嘉义报导〉嘉义县政府为感念台塑集团创办人<ahref="https://github.com/idc248/djy/blob/master/gb/tag/%E7%8E%8B%E6%B0%B8%E5%BA%86.md#1">王永庆</a>先生生前对嘉义县教育、医疗与老人福利的支持与贡献，4月28日上午在嘉义长庚纪念医院大厅举办“田园有情、城市有爱”<ahref="https://github.com/idc248/djy/blob/master/gb/tag/%E6%84%9F%E6%81%A9.md#1">感恩</a><ahref="https://github.com/idc248/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90%E4%BC%9A.md#1">音乐会</a>，使施、受者感受到温馨与真诚的关怀。县长张花冠并分送民众和医护人员康乃馨，在母亲节前夕传递感恩之情，表达县府对全天下母亲的敬意与尊荣。</p>
-<p><ahref="https://github.com/idc248/djy/blob/master/gb/tag/%E7%8E%8B%E6%B0%B8%E5%BA%86.md#1">王永庆</a>生前支持教育不遗余力，捐建嘉义县多所小学老旧教室与教学大楼，在5月<ahref="https://github.com/idc248/djy/blob/master/gb/tag/%E6%84%9F%E6%81%A9.md#1">感恩</a>温馨月前夕，县府邀请长庚医院附设护理之家的长辈来到大厅参加感恩<ahref="https://github.com/idc248/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90%E4%BC%9A.md#1">音乐会</a>活动，观赏由校长国乐团、祥和国小弦乐团和梅北国小小夯炉剧团精彩的演出。在长笛音乐家黄于真老师伴奏下，张花冠和长庚医院院长蔡荧煌也秀一手歌艺，为音乐会掀起一波又一波的高潮。</p>
+<p>【大纪元2014年04月29日讯】〈大纪元记者蔡上海台湾嘉义报导〉嘉义县政府为感念台塑集团创办人<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%8E%8B%E6%B0%B8%E5%BA%86.md#1">王永庆</a>先生生前对嘉义县教育、医疗与老人福利的支持与贡献，4月28日上午在嘉义长庚纪念医院大厅举办“田园有情、城市有爱”<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%84%9F%E6%81%A9.md#1">感恩</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90%E4%BC%9A.md#1">音乐会</a>，使施、受者感受到温馨与真诚的关怀。县长张花冠并分送民众和医护人员康乃馨，在母亲节前夕传递感恩之情，表达县府对全天下母亲的敬意与尊荣。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%8E%8B%E6%B0%B8%E5%BA%86.md#1">王永庆</a>生前支持教育不遗余力，捐建嘉义县多所小学老旧教室与教学大楼，在5月<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%84%9F%E6%81%A9.md#1">感恩</a>温馨月前夕，县府邀请长庚医院附设护理之家的长辈来到大厅参加感恩<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90%E4%BC%9A.md#1">音乐会</a>活动，观赏由校长国乐团、祥和国小弦乐团和梅北国小小夯炉剧团精彩的演出。在长笛音乐家黄于真老师伴奏下，张花冠和长庚医院院长蔡荧煌也秀一手歌艺，为音乐会掀起一波又一波的高潮。</p>
 <p>张花冠指出，嘉义县财政十分困难，名列全国倒数，巧妇难为无米之炊，推动建设与福利力有未逮，王创办人不忍偏乡地区的学童输在起跑线，生前出钱出力照顾嘉义囝仔，提供小朋友舒适安全的教室与优质的学习环境，尤其嘉惠地方医疗服务与社会福利事业，精神令人感佩。</p>
 <p>嘉义长庚医院一楼大厅28日上午弥漫着悠扬的乐声，一首又一首台湾民谣组曲传递着浓浓的感恩心情，护理之家的老人们绽放笑容，民众也感受到喜悦，气氛温馨感人。◇</p>
 <p>(责任编辑：晓玫)</p>
@@ -16,42 +15,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/12/6/6/n3606198.md#1">多障生许育玮  用音乐会感恩</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/12/8/5/n3652174.md#1">感恩父母心“父子琴深”庆八八</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/13/11/20/n4015327.md#1">感恩音乐会 圣诞专车开进新竹山区</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/13/12/22/n4040499.md#1">关怀自闭儿 圣诞感恩音乐会</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/14/4/15/n4132030.md#1">嘉义高中90周年校庆 音乐班校友感恩音乐会</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/20/5/20/n12123664.md#1">搭嘉市电动公车是时尚 601中山干线上线</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/20/5/20/n12123291.md#1">520结婚登记 嘉市户政赠喜气礼物祝福新人</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/20/5/19/n12121365.md#1">师生翘首期盼 桥头国小老旧校舍重建工程落成</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/20/5/19/n12121076.md#1">桥头社区发展协会捐赠火灾警报器 守护村民安全</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/20/5/19/n12120957.md#1">推动友善老鹰农法  屏科大打造猛禽无毒生活圈</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/6/6/n3606198.md#1">多障生许育玮  用音乐会感恩</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/8/5/n3652174.md#1">感恩父母心“父子琴深”庆八八</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/20/n4015327.md#1">感恩音乐会 圣诞专车开进新竹山区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/12/22/n4040499.md#1">关怀自闭儿 圣诞感恩音乐会</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/4/15/n4132030.md#1">嘉义高中90周年校庆 音乐班校友感恩音乐会</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13689924.md#1">黄敏惠表扬189位模范儿童</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13689366.md#1">嘉靖乾隆巧思竞艳  青花彩瓷景泰蓝南院登场</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689127.md#1">屏东连6年臭氧王 环盟吁县长候选人表态</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688256.md#1">嘉市65岁以上长者打疫苗加码 获千元商品卡</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687663.md#1">食品所年度研发成果  产研合作计划说明会</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/16/n9847533.md#1" target="_blank">共产主义受难者纪念碑与去共化浪潮</a></li><li><a href="https://github.com/idc248/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/23/n11403596.md#1" target="_blank">澳纽正义之声汇入全球反迫害之洪势</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/9/n11709371.md#1" target="_blank">袁斌：汉学家林培瑞认清中共谎言的觉醒之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/1/n11424700.md#1" target="_blank">罗兰：中共公安何以成公害</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/20/5/18/n12118997.md#1">世卫大会习近平提20亿美元援助 国人叫苦</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/20/5/18/n12118640.md#1">两会前习抓胡问鸣 矛头指向红二代</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/20/5/18/n12117803.md#1">4公尺陈时中沙雕超逼真 部长妙答感想笑翻媒体</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/20/5/18/n12119110.md#1">【新闻看点】逾120国吁查病毒 北京空前孤立</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/20/5/19/n12121364.md#1">陈时中办公室曝光！蔡英文：佩服又感动</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/20/5/18/n12119095.md#1">巨石强森女儿闯进WWE 成史上最年轻签约选手</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/20/5/18/n12117650.md#1">因男团解散陷低潮 潘君仑返乡务农找回动力</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/20/5/19/n12121988.md#1">爆大陆副导演潜规则 台亲共女星拒绝后遭暴力</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/20/5/18/n12118146.md#1">吴念真粉专已找回 遗憾贴文“几乎删光”</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/20/5/17/n12116539.md#1">爆杜汶泽包揽家务 田蕊妮幸福当“多余人”</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/20/5/17/n12115416.md#1">【疫情中的纽约人】破解预言的人</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/20/5/18/n12117860.md#1">蒲隆地驱逐WHO官员 仰赖上帝来抗疫</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/20/5/19/n12120346.md#1">曾预言中共肺炎 印度男孩：12月有更大灾难</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/20/5/1/n12076409.md#1">【历史上的瘟疫】带走伦敦1/5人口的瘟疫</a></li>
-<li><a href="https://github.com/idc248/djy/blob/master/gb/20/4/5/n12004394.md#1">入地府看见善恶记账簿 忏悔改过可销债</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688712.md#1">【马克时空】2023美军费超中共3倍 核武库全面现代化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/26/n13674661.md#1">自制一碗降糖餐！十大降血糖食物一次看</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/idc248/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/idc248/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/4/29/n4142731.htm">嘉县府举办纪念王永庆先生感恩音乐会</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/4/29/n4142731.htm">嘉县府举办纪念王永庆先生感恩音乐会</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/idc248/djy/blob/master/gb/14/4/29/n4142731.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/idc248/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/idc248/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/idc248/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/idc248/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/idc248/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/idc248/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/idc248/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/idc248/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/idc248/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/idc248/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/idc248/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/idc248/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/idc248/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/idc248/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/idc248/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/idc248/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/idc248/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/idc248/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/idc248/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/idc248/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/idc248/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/idc248/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/idc248/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/idc248/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/idc248/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/14/4/29/n4142731.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
